@@ -479,6 +479,17 @@ Defaults to false.
 </TR>
 
 <TR>
+<TD>mail.smtp.starttls.required</TD>
+<TD>boolean</TD>
+<TD>
+If true, requires the use of the <code>STARTTLS</code> command.
+If the server doesn't support the STARTTLS command, or the command
+fails, the connect method will fail.
+Defaults to false.
+</TD>
+</TR>
+
+<TR>
 <TD>mail.smtp.userset</TD>
 <TD>boolean</TD>
 <TD>
